cppcheck_report.txt
Implementation/account_signup.c:28:9: error: Width 22 given in format string (no. 1) is larger than destination buffer 'password[22]', use %21s to prevent overflowing it. [invalidScanfFormatWidth]
        scanf("%22s",password);
        ^
Implementation/write.c:112:5: warning:inconclusive: Width 150 given in format string (no. 1) is smaller than destination buffer 'product_name[300]'. [invalidScanfFormatWidth_smaller]
    scanf("%150s",product_name);
    ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

